--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
   "name": "vue-otp",
   "version": "0.1.0",
-  "private": true,
+  "author": "Pratheek Hegde <ptk609@gmail.com>",
+  "license": "MIT",
+  "main": "dist/vue-otp.common.js",
+  "module": "dist/vue-otp.umd.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pratheekhegde/vue-otp.git"
+  },
+  "keywords": [
+    "vue",
+    "otp",
+    "component",
+    "ui"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:library": "vue-cli-service build --target lib --name vue-otp src/library-entry.js",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
@@ -23,6 +44,8 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
   }
